--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,10 @@ include = [
 ]
 
 [dependencies]
+either = { version ="1.9.0", default-features = false }
 generic-array = "0.14.7"
+paste = "1.0.14"
+typenum = { version  = "1.16.0", default-features = false }
 
 [features]
 default = ["std"]
