--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,9 @@ generic-array = "0.14.7"
 paste = "1.0.14"
 typenum = { version  = "1.16.0", default-features = false }
 
+[dev-dependencies]
+lazy_static = "1.4.0"
+
 [features]
 default = ["std"]
 
